Convert to Android
- Update build
- Remove conditionals not relevant to Android environment
- Add mobile environment support
- Increase logo size, remove control-break reference
- Various cleanups
- Update README's

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ worker.wasm
 worker.js.mem
 /bin
 /build
+.idea/**
+CMakeCache.txt
+cmake_install.cmake
+CMakeFiles/**
+.cmake/**
+.ninja_deps
+.ninja_log
+Testing/**
+build.ninja
