--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,45 +1,51 @@
-cmake_minimum_required(VERSION 3.31.6)
+cmake_minimum_required(VERSION 3.28.3)
 
-project(my_app)
+project(acidwarp)
 
-if(NOT TARGET SDL3::SDL3)
-    find_package(SDL3 CONFIG)
+if(APPLE)
+    message(FATAL_ERROR "CMake is not supported for iOS / iPadOS / macOS")
+elseif(WIN32)
+    include(FindPkgConfig)
+    pkg_search_module(SDL REQUIRED sdl3)
+    include_directories(${SDL_INCLUDE_DIRS})
+elseif(ANDROID OR UNIX)
+    if(NOT TARGET SDL3::SDL3)
+        find_package(SDL3 CONFIG)
+    endif()
+
+    if(NOT TARGET SDL3::SDL3)
+        find_library(SDL3_LIBRARY NAMES "SDL3")
+        find_path(SDL3_INCLUDE_DIR NAMES "SDL3/SDL.h")
+        add_library(SDL3::SDL3 UNKNOWN IMPORTED)
+        set_property(TARGET SDL3::SDL3 PROPERTY IMPORTED_LOCATION "${SDL3_LIBRARY}")
+        set_property(TARGET SDL3::SDL3 PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${SDL3_INCLUDE_DIR}")
+    endif()
+
+    if(NOT TARGET SDL3::SDL3)
+        message(FATAL_ERROR "Cannot find SDL3.")
+    endif()
+else()
+    message(FATAL_ERROR "CMake is not supported for this platform.")
 endif()
 
-if(NOT TARGET SDL3::SDL3)
-    find_library(SDL3_LIBRARY NAMES "SDL3")
-    find_path(SDL3_INCLUDE_DIR NAMES "SDL3/SDL.h")
-    add_library(SDL3::SDL3 UNKNOWN IMPORTED)
-    set_property(TARGET SDL3::SDL3 PROPERTY IMPORTED_LOCATION "${SDL3_LIBRARY}")
-    set_property(TARGET SDL3::SDL3 PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${SDL3_INCLUDE_DIR}")
-endif()
-
-if(NOT TARGET SDL3::SDL3)
-    message(FATAL_ERROR "Cannot find SDL3.
-
-Possible ways to fix this:
-- Use a SDL3 Android aar archive, and configure gradle to use it: prefab is required.
-- Add add_subdirectory(path/to/SDL) to your CMake script, and make sure a vendored SDL is present there.
-")
-endif()
-
-# For logging in Android
+# Android: To add logging, use this:
 #find_library(log-lib log)
 
-add_library(main SHARED
-        acidwarp.c
-        bit_map.c
-        display.c
-        draw.c
-        gen_img.c
-        img_float.c
-        palinit.c
-        rolnfade.c
-)
+set(SOURCES acidwarp.c bit_map.c display.c draw.c gen_img.c img_float.c palinit.c rolnfade.c)
 
-# Add ${log-lib} if logging desired
-target_link_libraries(main PRIVATE SDL3::SDL3 GLESv2)
+if(ANDROID)
+    add_library(main SHARED ${SOURCES})
+else() # Windows, Linux
+    add_library(main STATIC ${SOURCES})
+endif()
 
-set(CORE_SOURCES acidwarp.c palinit.c rolnfade.c display.c)
-set(IMGGEN_SOURCES bit_map.c img_float.c)
-set(SOURCES ${CORE_SOURCES} ${IMGGEN_SOURCES} draw.c)
+if (WIN32)
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
+    add_definitions(-DGLEW_STATIC)
+    target_link_libraries(main ${SDL_STATIC_LDFLAGS} glew32 opengl32)
+elseif(ANDROID OR UNIX)
+    # Android: Add ${log-lib} if logging desired
+    target_link_libraries(main PRIVATE SDL3::SDL3 GLESv2)
+else()
+    # macOS / iOS / iPadOS: these are not cmake builds
+endif()
