--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ acidwarp.rgb
 worker.js
 worker.wasm
 worker.js.mem
+libmain.a
 /bin
 /build
 .idea/**
@@ -23,3 +24,22 @@ CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
 libmain.so
+libmain.dylib
+Makefile
+
+ALL_BUILD.*
+ZERO_CHECK.*
+Debug
+main.dir
+main.vcxproj
+main.vcxproj.filters
+my_app.sln
+x64
+*.sln
+
+# Ninja
+/build.ninja
+/ninja
+/ninja.bootstrap
+.ninja_deps
+.ninja_log
