--- a/.github/workflows/build-all-platforms.yml
+++ b/.github/workflows/build-all-platforms.yml
@@ -138,7 +138,7 @@ jobs:
           cpack -G DEB \
             -D CPACK_PACKAGE_CONTACT="github-actions@github.com" \
             -D CPACK_DEBIAN_PACKAGE_MAINTAINER="GitHub Actions"
-          mv *.deb ../../sdl3.deb
+          mv dist/*.deb ../../sdl3.deb
 
       - name: Install SDL3 from .deb
         run: sudo dpkg -i sdl3.deb
