--- a/windows/acidwarp.rc
+++ b/windows/acidwarp.rc
@@ -4,3 +4,33 @@
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
 IDI_ICON1               ICON                    "icon.ico"
+
+// Version Information
+1 VERSIONINFO
+FILEVERSION     5,0,0,0
+PRODUCTVERSION  5,0,0,0
+FILEFLAGSMASK   0x3fL
+FILEFLAGS       0x0L
+FILEOS          VOS_NT_WINDOWS32
+FILETYPE        VFT_APP
+FILESUBTYPE     VFT2_UNKNOWN
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904b0"
+        BEGIN
+            VALUE "CompanyName",      "Dermochelys Software, LLC"
+            VALUE "FileDescription",  "Acid Warp"
+            VALUE "FileVersion",      "5.0.0.0"
+            VALUE "InternalName",     "acidwarp-windows"
+            VALUE "LegalCopyright",   "(C)Copyright 1992, 1993 by Noah Spurrier and Mark Bilk"
+            VALUE "OriginalFilename", "acidwarp-windows.exe"
+            VALUE "ProductName",      "Acid Warp"
+            VALUE "ProductVersion",   "5.0.0.0"
+        END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x409, 1200
+    END
+END
