Fix ios, windows builds

--- a/shared/CMakeLists.txt
+++ b/shared/CMakeLists.txt
@@ -7,7 +7,7 @@ if(APPLE)
 elseif(WIN32)
     include(FindPkgConfig)
     pkg_search_module(SDL REQUIRED sdl3)
-    pkg_search_module(SDL_IMAGE REQUIRED SDL3_image)
+    pkg_search_module(SDL_IMAGE sdl3_image SDL3_image)
     include_directories(${SDL_INCLUDE_DIRS} ${SDL_IMAGE_INCLUDE_DIRS})
 elseif(ANDROID OR UNIX)
     if(NOT TARGET SDL3::SDL3)
