Fix Windows Control GUI & Build
- Must distribute libpng DLL alongside .exe due to limitation of
  DSL3_image

- Enable symlinks for windows build
- Update windows GH runner

--- a/.github/workflows/build-all-platforms.yml
+++ b/.github/workflows/build-all-platforms.yml
@@ -189,6 +189,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          symlinks: true
 
       - name: Setup MSYS2
         uses: msys2/setup-msys2@v2
