--- a/windows/acidwarp.rc
+++ b/windows/acidwarp.rc
@@ -5,6 +5,10 @@
 // remains consistent on all systems.
 IDI_ICON1               ICON                    "icon.ico"
 
+// Remote control overlay image embedded as binary resource
+// Resource ID 101
+101                     RCDATA                  "acidwarp/remote.png"
+
 // Version Information
 1 VERSIONINFO
 FILEVERSION     5,0,0,0
